--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html data-wf-domain="tectron.webflow.io" data-wf-page="6698d3273ab05985b48da4a8"
+<html data-wf-page="6698d3273ab05985b48da4a8"
   data-wf-site="6667e2deb8ad5b3f826293d0" lang="en">
 
 <head>
   <meta charset="utf-8" />
   <title>Techyon 2024</title>
   <meta
-    content="Experience the future with Tectron AI. From machine learning to natural language processing, our technology delivers results."
+    content="Techyon is an inter college technical event held annually at PCCE. The word Techyon was derived from Tachyon which is a hypothetical particle with speed more than the speed of the light. It hosts various technical events across all the departments."
     name="description" />
-  <meta content="Tectron - Home Two" property="og:title" />
+  <meta content="Techyon 2024" property="og:title" />
   <meta
-    content="Experience the future with Tectron AI. From machine learning to natural language processing, our technology delivers results."
+    content="Techyon is an inter college technical event held annually at PCCE. The word Techyon was derived from Tachyon which is a hypothetical particle with speed more than the speed of the light. It hosts various technical events across all the departments."
     property="og:description" />
-  <meta content="Tectron - Home Two" property="twitter:title" />
+  <meta content="Techyon 2024" property="twitter:title" />
   <meta
-    content="Experience the future with Tectron AI. From machine learning to natural language processing, our technology delivers results."
+    content="Techyon is an inter college technical event held annually at PCCE. The word Techyon was derived from Tachyon which is a hypothetical particle with speed more than the speed of the light. It hosts various technical events across all the departments."
     property="twitter:description" />
   <meta property="og:type" content="website" />
   <meta content="summary_large_image" name="twitter:card" />
