--- a/pages/blog_1.html
+++ b/pages/blog_1.html
@@ -555,11 +555,11 @@
                   href="#"
                   class="blog-three-main-item w-inline-block">
                   <div class="blog-three-item-image" onclick="openLightbox()"><img class="auto-fit responsive-image-full-width"
-                          src="images/cards/img1.jpg"
+                          src="../images/dept/it/posters/testPoster2.jpg"
                           width="390" height="232" alt=""
                           sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 388px"
                           data-w-id="496713a6-7eba-ba5a-12a8-93a396116d75" loading="lazy"
-                          srcset="images/cards/img1.jpg 500w, images/cards/img1.jpg 800w, images/cards/img1.jpg 846w" />
+                          srcset="../images/dept/it/posters/testPoster2.jpg 500w, ../images/dept/it/posters/testPoster2.jpg 800w, ../images/dept/it/posters/testPoster2.jpg 846w" />
                   </div>
 
                   
@@ -634,7 +634,7 @@
               </div>
               <!-- Lightbox div -->
               <div id="lightbox" class="lightbox" style="display: none;">
-                <span style="background-image: url('images/cards/img1.jpg');"></span>
+                <span style="background-image: url('../images/dept/it/posters/testPoster.jpg');"></span>
                 <div onclick="closeLightbox()" style="cursor: pointer; text-align:center; color:white;">Close</div>
             </div>
           </div>
