cs cards page to edit

--- a/pages/cs_cards.html
+++ b/pages/cs_cards.html
@@ -3,11 +3,7 @@
 
 
 
-
-
 <!-- THIS IS A TEMPORARY FILE  -->
-
-
 
 
 
@@ -244,12 +240,12 @@
         <div class="main-container">
             <div data-w-id="c56377cf-9ab6-40fe-b764-3641f61cbdf9" class="about-one-hero-tag-wrapper">
                 <div class="about-one-tag">
-                    <div class="tag-text">IT DEPARTMENT</div>
+                    <div class="tag-text">COMPUTER DEPARTMENT'S</div>
                 </div>
             </div>
             <div class="blog-one-hero-heading">
                 <div class="blog-one-hero-heading-one overflow-hidden">
-                    <h1 data-w-id="c56377cf-9ab6-40fe-b764-3641f61cbdff" class="chnage-padding text-align-center">Mindspark</h1>
+                    <h1 data-w-id="c56377cf-9ab6-40fe-b764-3641f61cbdff" class="chnage-padding text-align-center">Cognibyte</h1>
                 </div>
         </div>
         <div class="home-one-social-media">
