--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                   <div>
                     <div class="peddingstroke">
                       <div class="insidebutton _2 chnage-color-gredient">
-                        <a class="button-font change-position" href="./data/A4 - 15.pdf" download="./data/A4 - 15.pdf">Schedule</a>
+                        <a class="button-font change-position" href="/images/core/schedule.jpg" download="schedule.jpg">Schedule</a>
                         <div class="hoverline chnage-gredient"
                           style="transform: translate3d(-100%, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
                         </div>
