--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
                         
     
                         <a data-w-id="61a9b5aa-e899-b1ab-71e6-c2f976411506"
-                        class="main-button w-inline-block" href="/images/dept/ecomp/Enigma 2024 event details .pdf">
+                        class="main-button w-inline-block" href="/images/dept/ecomp/ENIGMA 2k24.pdf">
                         <div data-w-id="0c51c0e9-6720-8a63-a334-477a02b4b73a" class="overflowhidden">
                           <div>
                             <div class="peddingstroke">
