--- a/pages/mech.html
+++ b/pages/mech.html
@@ -773,7 +773,7 @@ display: block;
 
                         <div id="outer">
         
-                           <div class="button_slide slide_left" onclick="redirectToRegister('https://me-qr.com/DrKBIYxb')">REGISTER</div>
+                           <div class="button_slide slide_left" onclick="redirectToRegister('https://docs.google.com/forms/d/e/1FAIpQLSfjkBNj-5ZeCUegkerIBVTdcGce4_J9g00pQOlydFHRfMnuPg/viewform?usp=sf_link')">REGISTER</div>
                             <div class="button_slide slide_left" onclick="downloadRuleBook('/images/dept/mech/rulebook/RULE BOOKS.pdf')">RULE BOOK</div>
                            
                           </div>
