dev team and scrollbar update

--- a/pages/team.html
+++ b/pages/team.html
@@ -693,9 +693,9 @@
                         <div id="w-node-_1b4a7989-3413-825c-d0cc-254adb2f2c5a-ff41db6b"
                             data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c5a" class="about-one-team-item">
                             <div class="about-one-team-image"><img width="390" height="436" alt=""
-                                src="/images/core/dummy.webp"
+                                src="/images/core/Nikhil.webp"
                                 sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 390px"
-                                srcset="/images/core/dummy.webp 500w, /images/core/dummy.webp 780w"
+                                srcset="/images/core/Nikhil.webp 500w, /images/core/Nikhil.webp 780w"
                                 class="auto-fit responsive-image-full-width" />
                                 <div data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c5d"
                                 class="about-one-team-image-overlay">
@@ -707,14 +707,14 @@
                                         <div data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c61"
                                             class="social-icon-circle"></div>
                                     </a><a data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c62"
-                                    href="https://www.instagram.com/rishhh__07/profilecard/?igsh=dTlncGFkcnZ6dGpx" class="round-circle w-inline-block"><img
+                                    href="https://www.instagram.com/itsnikhill_04/profilecard/?igsh=d2tmZ3JtcWxxOXQ2" class="round-circle w-inline-block"><img
                                         width="20" height="20" alt="icon"
                                         src="/images/logo/instagram-2016-logo.svg"
                                         loading="lazy" class="social-icon-image" />
                                     <div data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c64"
                                         class="social-icon-circle"></div>
                                 </a><a data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c65"
-                                        href="https://www.linkedin.com/in/rishabh-kerkar-5479a3258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="round-circle w-inline-block"><img
+                                        href="https://www.linkedin.com/in/nikhil-kumar-680a58225?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="round-circle w-inline-block"><img
                                             width="20" height="20" alt="icon
 " src="/images/logo/linkedin-icon-2-logo-svgrepo-com.svg"
                                             loading="lazy" class="social-icon-image" />
@@ -733,9 +733,9 @@
                         <div id="w-node-_1b4a7989-3413-825c-d0cc-254adb2f2c5a-ff41db6b"
                             data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c5a" class="about-one-team-item">
                             <div class="about-one-team-image"><img width="390" height="436" alt=""
-                                src="/images/core/dummy.webp"
+                                src="/images/core/Saideep.webp"
                                 sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 390px"
-                                srcset="/images/core/dummy.webp 500w, /images/core/dummy.webp 780w"
+                                srcset="/images/core/Saideep.webp 500w, /images/core/Saideep.webp 780w"
                                 class="auto-fit responsive-image-full-width" />
                                 <div data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c5d"
                                 class="about-one-team-image-overlay">
@@ -747,14 +747,14 @@
                                         <div data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c61"
                                             class="social-icon-circle"></div>
                                     </a><a data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c62"
-                                    href="https://www.instagram.com/rishhh__07/profilecard/?igsh=dTlncGFkcnZ6dGpx" class="round-circle w-inline-block"><img
+                                    href="https://www.instagram.com/" class="round-circle w-inline-block"><img
                                         width="20" height="20" alt="icon"
                                         src="/images/logo/instagram-2016-logo.svg"
                                         loading="lazy" class="social-icon-image" />
                                     <div data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c64"
                                         class="social-icon-circle"></div>
                                 </a><a data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c65"
-                                        href="https://www.linkedin.com/in/rishabh-kerkar-5479a3258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="round-circle w-inline-block"><img
+                                        href="https://www.linkedin.com/in/saideep-gaunker-917399295?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="round-circle w-inline-block"><img
                                             width="20" height="20" alt="icon
 " src="/images/logo/linkedin-icon-2-logo-svgrepo-com.svg"
                                             loading="lazy" class="social-icon-image" />
@@ -773,9 +773,9 @@
                         <div id="w-node-_1b4a7989-3413-825c-d0cc-254adb2f2c5a-ff41db6b"
                             data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c5a" class="about-one-team-item">
                             <div class="about-one-team-image"><img width="390" height="436" alt=""
-                                src="/images/core/dummy.webp"
+                                src="/images/core/Abhishek.webp"
                                 sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 390px"
-                                srcset="/images/core/dummy.webp 500w, /images/core/dummy.webp 780w"
+                                srcset="/images/core/Abhishek.webp 500w, /images/core/Abhishek.webp 780w"
                                 class="auto-fit responsive-image-full-width" />
                                 <div data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c5d"
                                 class="about-one-team-image-overlay">
@@ -787,14 +787,14 @@
                                         <div data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c61"
                                             class="social-icon-circle"></div>
                                     </a><a data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c62"
-                                    href="https://www.instagram.com/rishhh__07/profilecard/?igsh=dTlncGFkcnZ6dGpx" class="round-circle w-inline-block"><img
+                                    href="https://www.instagram.com/gtx__abhi/profilecard/?igsh=aXgwdTB5OWRqeTZr" class="round-circle w-inline-block"><img
                                         width="20" height="20" alt="icon"
                                         src="/images/logo/instagram-2016-logo.svg"
                                         loading="lazy" class="social-icon-image" />
                                     <div data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c64"
                                         class="social-icon-circle"></div>
                                 </a><a data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c65"
-                                        href="https://www.linkedin.com/in/rishabh-kerkar-5479a3258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="round-circle w-inline-block"><img
+                                        href="https://www.linkedin.com/in/abhishek-haldankar-aa9074172/" class="round-circle w-inline-block"><img
                                             width="20" height="20" alt="icon
 " src="/images/logo/linkedin-icon-2-logo-svgrepo-com.svg"
                                             loading="lazy" class="social-icon-image" />
@@ -803,7 +803,7 @@
                                     </a></div>
                             </div>
                             </div><a href="#" class="about-one-team-details w-inline-block">
-                                <div class="heading-four">Abhishek</div>
+                                <div class="heading-four">Abhishek Haldankar</div>
                                 <div class="button-font chnage-color-grey">Information Technology</div>
                             </a>
                         </div>
@@ -879,4 +879,4 @@
       <script src="/js/webflow.f7df22389.js" type="text/javascript"></script>
 </body>
 
-</html>w
+</html>
