--- a/pages/it.html
+++ b/pages/it.html
@@ -596,11 +596,11 @@ display: block;
                 href="#"
                 class="blog-three-main-item w-inline-block">
                 <div class="blog-three-item-image" onclick="openLightbox('lightbox1')"><img class="auto-fit responsive-image-full-width"
-                        src="/images/dept/it/thumbnail/BGMI.webp"
+                        src="/images/dept/it/thumbnail/pcce-bgmi-techyon.webp"
                         width="390" height="232" alt=""
                         sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 388px"
                         data-w-id="496713a6-7eba-ba5a-12a8-93a396116d75" loading="lazy"
-                        srcset="/images/dept/it/thumbnail/BGMI.webp 500w, /images/dept/it/thumbnail/BGMI.webp 800w, /images/dept/it/thumbnail/BGMI.webp 846w" />
+                        srcset="/images/dept/it/thumbnail/pcce-bgmi-techyon.webp 500w, /images/dept/it/thumbnail/pcce-bgmi-techyon.webp 800w, /images/dept/it/thumbnail/pcce-bgmi-techyon.webp 846w" />
                 </div>
 
                 <div class="blog-three-main-item-text">
@@ -645,11 +645,11 @@ display: block;
                 href="#"
                 class="blog-three-main-item w-inline-block">
                 <div class="blog-three-item-image" onclick="openLightbox('lightbox2')"><img class="auto-fit responsive-image-full-width"
-                        src="/images/dept/it/thumbnail/Survival of the Web.webp"
+                        src="/images/dept/it/thumbnail/pcce-survival-of-the-web-techyon.webp"
                         width="390" height="232" alt=""
                         sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 388px"
                         data-w-id="496713a6-7eba-ba5a-12a8-93a396116d75" loading="lazy"
-                        srcset="/images/dept/it/thumbnail/Survival of the Web.web 500w, /images/dept/it/thumbnail/Survival of the Web.web 800w, /images/dept/it/thumbnail/Survival of the Web.web 846w" />
+                        srcset="/images/dept/it/thumbnail/pcce-survival-of-the-web-techyon.webp 500w, /images/dept/it/thumbnail/pcce-survival-of-the-web-techyon.webp 800w, /images/dept/it/thumbnail/pcce-survival-of-the-web-techyon.webp 846w" />
                 </div>
 
                 <div class="blog-three-main-item-text">
@@ -694,11 +694,11 @@ display: block;
               href="#"
               class="blog-three-main-item w-inline-block">
               <div class="blog-three-item-image" onclick="openLightbox('lightbox3')"><img class="auto-fit responsive-image-full-width"
-                      src="/images/dept/it/thumbnail/Blind Fallout.webp"
+                      src="/images/dept/it/thumbnail/pcce-blind-fallout-techyon.webp"
                       width="390" height="232" alt=""
                       sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 388px"
                       data-w-id="496713a6-7eba-ba5a-12a8-93a396116d75" loading="lazy"
-                      srcset="/images/dept/it/thumbnail/Blind Fallout.webp 500w, /images/dept/it/thumbnail/Blind Fallout.webp 800w, /images/dept/it/thumbnail/Blind Fallout.webp 846w" />
+                      srcset="/images/dept/it/thumbnail/pcce-blind-fallout-techyon.webp 500w, /images/dept/it/thumbnail/pcce-blind-fallout-techyon.webp 800w, /images/dept/it/thumbnail/pcce-blind-fallout-techyon.webp 846w" />
               </div>
 
               <div class="blog-three-main-item-text">
@@ -743,11 +743,11 @@ display: block;
             href="#"
             class="blog-three-main-item w-inline-block">
             <div class="blog-three-item-image" onclick="openLightbox('lightbox4')"><img class="auto-fit responsive-image-full-width"
-                    src="/images/dept/it/thumbnail/Tech Attack.webp"
+                    src="/images/dept/it/thumbnail/pcce-tech-attack-techyon.webp"
                     width="390" height="232" alt=""
                     sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 388px"
                     data-w-id="496713a6-7eba-ba5a-12a8-93a396116d75" loading="lazy"
-                    srcset="/images/dept/it/thumbnail/Tech Attack.webp 500w, /images/dept/it/thumbnail/Tech Attack.webp 800w, /images/dept/it/thumbnail/Tech Attack.webp 846w" />
+                    srcset="/images/dept/it/thumbnail/pcce-tech-attack-techyon.webp 500w, /images/dept/it/thumbnail/pcce-tech-attack-techyon.webp 800w, /images/dept/it/thumbnail/pcce-tech-attack-techyon.webp 846w" />
             </div>
 
             <div class="blog-three-main-item-text">
@@ -877,11 +877,11 @@ display: block;
                 href="#"
                 class="blog-three-main-item w-inline-block">
                 <div class="blog-three-item-image" onclick="openLightbox('lightbox21')"><img class="auto-fit responsive-image-full-width"
-                        src="/images/dept/it/thumbnail/COD.webp"
+                        src="/images/dept/it/thumbnail/pcce-cod-mobile-techyon.webp"
                         width="390" height="232" alt=""
                         sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 388px"
                         data-w-id="496713a6-7eba-ba5a-12a8-93a396116d75" loading="lazy"
-                        srcset="/images/dept/it/thumbnail/COD.webp 500w, /images/dept/it/thumbnail/COD.webp 800w, /images/dept/it/thumbnail/COD.webp 846w" />
+                        srcset="/images/dept/it/thumbnail/pcce-cod-mobile-techyon.webp 500w, /images/dept/it/thumbnail/pcce-cod-mobile-techyon.webp 800w, /images/dept/it/thumbnail/pcce-cod-mobile-techyon.webp 846w" />
                 </div>
 
                 <div class="blog-three-main-item-text">
@@ -929,11 +929,11 @@ display: block;
                 href="#"
                 class="blog-three-main-item w-inline-block">
                 <div class="blog-three-item-image" onclick="openLightbox('lightbox22')"><img class="auto-fit responsive-image-full-width"
-                        src="/images/dept/it/thumbnail/Interface of the End.webp"
+                        src="/images/dept/it/thumbnail/pcce-interface-of-the-end-techyon.webp"
                         width="390" height="232" alt=""
                         sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 388px"
                         data-w-id="496713a6-7eba-ba5a-12a8-93a396116d75" loading="lazy"
-                        srcset="/images/dept/it/thumbnail//images/dept/it/thumbnail/Interface of the End.webp 500w, /images/dept/it/thumbnail//images/dept/it/thumbnail/Interface of the End.webp 800w, /images/dept/it/thumbnail//images/dept/it/thumbnail/Interface of the End.webp 846w" />
+                        srcset="/images/dept/it/thumbnail//images/dept/it/thumbnail/pcce-interface-of-the-end-techyon.webp 500w, /images/dept/it/thumbnail//images/dept/it/thumbnail/pcce-interface-of-the-end-techyon.webp 800w, /images/dept/it/thumbnail//images/dept/it/thumbnail/pcce-interface-of-the-end-techyon.webp 846w" />
                 </div>
 
                 <div class="blog-three-main-item-text">
@@ -980,11 +980,11 @@ display: block;
               href="#"
               class="blog-three-main-item w-inline-block">
               <div class="blog-three-item-image" onclick="openLightbox('lightbox23')"><img class="auto-fit responsive-image-full-width"
-                      src="/images/dept/it/thumbnail/Doomsday Trivia.webp"
+                      src="/images/dept/it/thumbnail/pcce-doomsday-trivia-techyon.webp"
                       width="390" height="232" alt=""
                       sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 388px"
                       data-w-id="496713a6-7eba-ba5a-12a8-93a396116d75" loading="lazy"
-                      srcset="/images/dept/it/thumbnail/Doomsday Trivia.webp 500w, /images/dept/it/thumbnail/Doomsday Trivia.webp 800w, /images/dept/it/thumbnail/Doomsday Trivia.webp 846w" />
+                      srcset="/images/dept/it/thumbnail/pcce-doomsday-trivia-techyon.webp 500w, /images/dept/it/thumbnail/pcce-doomsday-trivia-techyon.webp 800w, /images/dept/it/thumbnail/pcce-doomsday-trivia-techyon.webp 846w" />
               </div>
 
               <div class="blog-three-main-item-text">
@@ -1030,11 +1030,11 @@ display: block;
             href="#"
             class="blog-three-main-item w-inline-block">
             <div class="blog-three-item-image" onclick="openLightbox('lightbox24')"><img class="auto-fit responsive-image-full-width"
-                    src="/images/dept/it/thumbnail/Apocalypse Anamolies.webp"
+                    src="/images/dept/it/thumbnail/pcce-apocalypse-anamolies-techyon.webp"
                     width="390" height="232" alt=""
                     sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 388px"
                     data-w-id="496713a6-7eba-ba5a-12a8-93a396116d75" loading="lazy"
-                    srcset="/images/dept/it/thumbnail/Apocalypse Anamolies.webp 500w, /images/dept/it/thumbnail/Apocalypse Anamolies.webp 800w, /images/dept/it/thumbnail/Apocalypse Anamolies.webp 846w" />
+                    srcset="/images/dept/it/thumbnail/pcce-apocalypse-anamolies-techyon.webp 500w, /images/dept/it/thumbnail/pcce-apocalypse-anamolies-techyon.webp 800w, /images/dept/it/thumbnail/pcce-apocalypse-anamolies-techyon.webp 846w" />
             </div>
 
             <div class="blog-three-main-item-text">
@@ -1089,7 +1089,7 @@ display: block;
             </div>
 
             <div id="lightbox23" class="lightbox" style="display: none;">
-              <span style="background-image: url('/images/dept/it/posters/Doomsday\ Trivia.webp"></span>
+              <span style="background-image: url('/images/dept/it/posters/Doomsday\ Trivia.webp')"></span>
               <div onclick="closeLightbox('lightbox23')" style="cursor: pointer; text-align:center; color:white;">Close</div>
             </div>
 
@@ -1110,11 +1110,11 @@ display: block;
                 href="#"
                 class="blog-three-main-item w-inline-block">
                 <div class="blog-three-item-image" onclick="openLightbox('lightbox31')"><img class="auto-fit responsive-image-full-width"
-                        src="/images/dept/it/thumbnail/FIFA.webp"
+                        src="/images/dept/it/thumbnail/pcce-fifa-techyon.webp"
                         width="390" height="232" alt=""
                         sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 388px"
                         data-w-id="496713a6-7eba-ba5a-12a8-93a396116d75" loading="lazy"
-                        srcset="/images/dept/it/thumbnail/FIFA.webp 500w, /images/dept/it/thumbnail/FIFA.webp 800w, /images/dept/it/thumbnail/FIFA.webp 846w" />
+                        srcset="/images/dept/it/thumbnail/pcce-fifa-techyon.webp 500w, /images/dept/it/thumbnail/pcce-fifa-techyon.webp 800w, /images/dept/it/thumbnail/pcce-fifa-techyon.webp 846w" />
                 </div>
 
                 <div class="blog-three-main-item-text">
@@ -1162,11 +1162,11 @@ display: block;
                 href="#"
                 class="blog-three-main-item w-inline-block">
                 <div class="blog-three-item-image" onclick="openLightbox('lightbox32')"><img class="auto-fit responsive-image-full-width"
-                        src="/images/dept/it/thumbnail/Pitch or Perish.webp"
+                        src="/images/dept/it/thumbnail/pcce-pitch-or-perish-techyon.webp"
                         width="390" height="232" alt=""
                         sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 388px"
                         data-w-id="496713a6-7eba-ba5a-12a8-93a396116d75" loading="lazy"
-                        srcset="/images/dept/it/thumbnail/Pitch or Perish.webp 500w, /images/dept/it/thumbnail/Pitch or Perish.webp 800w, /images/dept/it/thumbnail/Pitch or Perish.webp 846w" />
+                        srcset="/images/dept/it/thumbnail/pcce-pitch-or-perish-techyon.webp 500w, /images/dept/it/thumbnail/pcce-pitch-or-perish-techyon.webp 800w, /images/dept/it/thumbnail/pcce-pitch-or-perish-techyon.webp 846w" />
                 </div>
 
                 <div class="blog-three-main-item-text">
@@ -1213,11 +1213,11 @@ display: block;
               href="#"
               class="blog-three-main-item w-inline-block">
               <div class="blog-three-item-image" onclick="openLightbox('lightbox33')"><img class="auto-fit responsive-image-full-width"
-                      src="/images/dept/it/thumbnail/D cipher chase.webp"
+                      src="/images/dept/it/thumbnail/pcce-d-cipher-chase-techyon.webp"
                       width="390" height="232" alt=""
                       sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 388px"
                       data-w-id="496713a6-7eba-ba5a-12a8-93a396116d75" loading="lazy"
-                      srcset="/images/dept/it/thumbnail/D cipher chase.webp 500w, /images/dept/it/thumbnail/D cipher chase.webp 800w, /images/dept/it/thumbnail/D cipher chase.webp 846w" />
+                      srcset="/images/dept/it/thumbnail/pcce-d-cipher-chase-techyon.webp 500w, /images/dept/it/thumbnail/pcce-d-cipher-chase-techyon.webp 800w, /images/dept/it/thumbnail/pcce-d-cipher-chase-techyon.webp 846w" />
               </div>
 
               <div class="blog-three-main-item-text">
