--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
   
           <!-- MECH -->
           <div id="w-node-_7f37592a-1cf0-5388-dbf9-f8b94b77262b-d96a12da" class="featuree-three-post-item">
-            <div class="feature-one-item-post-icon-wrapper"><a href="/pages/cs.html">
+            <div class="feature-one-item-post-icon-wrapper"><a href="/pages/mech.html">
                 <div class="feature-one-item-post-icon-dept">
                     <div class="feature-one-item-post-icon-main"><img width="100%" height="100%"
                       alt="Gredient Icon"
@@ -777,7 +777,7 @@
   
         <!-- ECOMP -->
         <div id="w-node-_7f37592a-1cf0-5388-dbf9-f8b94b77262b-d96a12da" class="featuree-three-post-item">
-          <div class="feature-one-item-post-icon-wrapper"><a href="/pages/cs.html">
+          <div class="feature-one-item-post-icon-wrapper"><a href="/pages/ecomp.html">
               <div class="feature-one-item-post-icon-dept">
                   <div class="feature-one-item-post-icon-main"><img width="100%" height="100%"
                     alt="Gredient Icon"
