--- a/pages/ecomp.html
+++ b/pages/ecomp.html
@@ -659,7 +659,7 @@
 
                     <div class="button_slide slide_left"
                       onclick="redirectToRegister('https://forms.gle/rtBnpXwhj21F5wJY9')">REGISTER</div>
-                    <div class="button_slide slide_left" onclick="downloadRuleBook('/images/dept/ecomp/rulebook/Reel')">
+                    <div class="button_slide slide_left" onclick="downloadRuleBook('/images/dept/ecomp/rulebook/Reel.pdf')">
                       RULE BOOK</div>
 
                   </div>
@@ -1002,7 +1002,7 @@
                     <div class="button_slide slide_left"
                       onclick="redirectToRegister('https://forms.gle/DV6TtNNDwJmpVSnp9')">REGISTER</div>
                     <div class="button_slide slide_left"
-                      onclick="downloadRuleBook('/images/dept/ecomp/rulebook/Wild lens')">RULE BOOK</div>
+                      onclick="downloadRuleBook('/images/dept/ecomp/rulebook/Wild lens.pdf')">RULE BOOK</div>
                   </div>
 
                 </div>
