--- a/pages/mech.html
+++ b/pages/mech.html
@@ -699,7 +699,7 @@ display: block;
                         <div id="outer">
         
                             <div class="button_slide slide_left" >SPOT REGISTER</div> <br>
-                            <div class="button_slide slide_left" onclick="downloadRuleBook('/images/dept/mech/rulebook/Robo Soccer Rules Techyon 2024.doc')">RULE BOOK</div>
+                            <div class="button_slide slide_left" onclick="downloadRuleBook('/images/dept/mech/rulebook/Robo Soccer Rules Techyon 2024.docx')">RULE BOOK</div>
                            
                           </div>
 
