--- a/pages/ecomp.html
+++ b/pages/ecomp.html
@@ -120,7 +120,7 @@
             data-easing2="ease" role="banner" class="navbar w-nav">
             <div class="navbar-wrapper">
               <!-- pcce logo and name -->
-              <a href="/index.html" class="site-logo w-nav-brand"><img width="432" height="80" alt="Logo"
+              <a href="https://pccegoa.edu.in/" class="site-logo w-nav-brand"><img width="432" height="80" alt="Logo"
                   src="/images/core/pcce_logo.svg" class="header-two-logo" /></a>
 
               <!-- navigating buttons -->
@@ -147,6 +147,15 @@
                   </nav>
                 </div>
 
+                <!--Home -->
+                <div data-delay="0" data-hover="true" data-w-id="61a9b5aa-e899-b1ab-71e6-c2f9764114b8"
+                  class="chnage-dropdown w-dropdown">
+                  <div class="dropdown-toggle w-dropdown-toggle">
+                    <a class="menu-font" href="/index.html">
+                      Home</a>
+                  </div>
+                </div>
+                
                 <!-- sponsors -->
                 <div data-delay="0" data-hover="true" data-w-id="61a9b5aa-e899-b1ab-71e6-c2f9764114b8"
                   class="chnage-dropdown w-dropdown">
@@ -844,7 +853,7 @@
 
           <div role="listitem" class="w-dyn-item"><a id="w-node-_496713a6-7eba-ba5a-12a8-93a396116d73-b40ac193"
             data-w-id="496713a6-7eba-ba5a-12a8-93a396116d73" href="#" class="blog-three-main-item w-inline-block">
-            <div class="blog-three-item-image" onclick="openLightbox('lightbox32')"><img
+            <div class="blog-three-item-image" onclick="openLightbox('lightbox6')"><img
                 class="auto-fit responsive-image-full-width"
                 src="/images/dept/ecomp/posters/pcce-arcadegames-techyon.webp" width="390" height="232" alt=""
                 sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 388px"
@@ -913,9 +922,9 @@
           <div onclick="closeLightbox('lightbox4')" style="cursor: pointer; text-align:center; color:white;">Close</div>
         </div>
 
-        <div id="lightbox32" class="lightbox" style="display: none;">
+        <div id="lightbox6" class="lightbox" style="display: none;">
           <span style="background-image: url('/images/dept/ecomp/posters/pcce-arcadegames-techyon.webp');"></span>
-          <div onclick="closeLightbox('lightbox32')" style="cursor: pointer; text-align:center; color:white;">Close
+          <div onclick="closeLightbox('lightbox6')" style="cursor: pointer; text-align:center; color:white;">Close
           </div>
         </div>
 
@@ -1280,7 +1289,7 @@
             
           <div role="listitem" class="w-dyn-item"><a id="w-node-_496713a6-7eba-ba5a-12a8-93a396116d73-b40ac193"
               data-w-id="496713a6-7eba-ba5a-12a8-93a396116d73" href="#" class="blog-three-main-item w-inline-block">
-              <div class="blog-three-item-image" onclick="openLightbox('lightbox32')"><img
+              <div class="blog-three-item-image" onclick="openLightbox('lightbox28')"><img
                   class="auto-fit responsive-image-full-width"
                   src="/images/dept/ecomp/posters/pcce-arcadegames-techyon.webp" width="390" height="232" alt=""
                   sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 388px"
@@ -1365,9 +1374,9 @@
           </div>
         </div>
 
-        <div id="lightbox32" class="lightbox" style="display: none;">
+        <div id="lightbox28" class="lightbox" style="display: none;">
           <span style="background-image: url('/images/dept/ecomp/posters/pcce-arcadegames-techyon.webp');"></span>
-          <div onclick="closeLightbox('lightbox32')" style="cursor: pointer; text-align:center; color:white;">Close
+          <div onclick="closeLightbox('lightbox28')" style="cursor: pointer; text-align:center; color:white;">Close
           </div>
         </div>
 
