--- a/pages/ecomp.html
+++ b/pages/ecomp.html
@@ -596,6 +596,7 @@
       <!-- day 1 -->
       <div class="w-dyn-list tab-content" id="day1">
         <h1>day 1</h1>
+        <p>click respective thumbnails for more info</p>
         <div role="list" class="blog-three-main-wrapper w-dyn-items">
 
           <div role="listitem" class="w-dyn-item"><a id="w-node-_496713a6-7eba-ba5a-12a8-93a396116d73-b40ac193"
@@ -937,6 +938,7 @@
       <!-- day 2 -->
       <div class="w-dyn-list tab-content" id="day2">
         <h1>day 2</h1>
+        <p>click respective thumbnails for more info</p>
         <div role="list" class="blog-three-main-wrapper w-dyn-items">
 
           <div role="listitem" class="w-dyn-item"><a id="w-node-_496713a6-7eba-ba5a-12a8-93a396116d73-b40ac193"
@@ -1390,6 +1392,7 @@
       <!-- day 3 -->
       <div class="w-dyn-list tab-content" id="day3">
         <h1>day 3</h1>
+        <p>click respective thumbnails for more info</p>
         <div role="list" class="blog-three-main-wrapper w-dyn-items">
 
           <div role="listitem" class="w-dyn-item"><a id="w-node-_496713a6-7eba-ba5a-12a8-93a396116d73-b40ac193"
