--- a/pages/mech.html
+++ b/pages/mech.html
@@ -577,6 +577,7 @@ display: block;
       <!-- day 1 -->
         <div class="w-dyn-list tab-content" id="day1" >
           <h1>day 1</h1>
+            <p>click respective thumbnails for more info</p>
             <div role="list" class="blog-three-main-wrapper w-dyn-items">
 
               
@@ -750,6 +751,7 @@ display: block;
         <!-- day 2 -->
         <div class="w-dyn-list tab-content" id="day2" >
           <h1>day 2</h1>
+            <p>click respective thumbnails for more info</p>
             <div role="list" class="blog-three-main-wrapper w-dyn-items">
 
             <div role="listitem" class="w-dyn-item"><a
@@ -922,6 +924,7 @@ display: block;
         <!-- day 3 -->
         <div class="w-dyn-list tab-content" id="day3" >
           <h1>day 3</h1>
+            <p>click respective thumbnails for more info</p>
             <div role="list" class="blog-three-main-wrapper w-dyn-items">
 
               <div role="listitem" class="w-dyn-item"><a
