--- a/pages/team.html
+++ b/pages/team.html
@@ -47,7 +47,7 @@
             data-easing2="ease" role="banner" class="navbar w-nav">
             <div class="navbar-wrapper">
               <!-- pcce logo and name -->
-              <a href="/index.html" class="site-logo w-nav-brand"><img width="432" height="80"
+              <a href="https://pccegoa.edu.in/" class="site-logo w-nav-brand"><img width="432" height="80"
                   alt="Logo" src="/images/core/pcce_logo.svg" class="header-two-logo" /></a>
 
               <!-- navigating buttons -->
@@ -74,6 +74,15 @@
                       class="header-menu-item sub-menu change-line-height w-dropdown-link">MECH</a>
                   </nav>
                 </div>
+
+                  <!-- Home -->
+                      <div data-delay="0" data-hover="true" data-w-id="61a9b5aa-e899-b1ab-71e6-c2f9764114b8"
+                      class="chnage-dropdown w-dropdown">
+                      <div class="dropdown-toggle w-dropdown-toggle">
+                        <a class="menu-font" href="/index.html#sponsors">
+                          Home</a>
+                      </div>
+                    </div>
 
                 <!-- sponsors -->
                 <div data-delay="0" data-hover="true" data-w-id="61a9b5aa-e899-b1ab-71e6-c2f9764114b8"
