--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             data-easing2="ease" role="banner" class="navbar w-nav">
             <div class="navbar-wrapper">
               <!-- pcce logo and name -->
-              <a href="/index.html" class="site-logo w-nav-brand"><img width="432" height="80"
+              <a href="https://pccegoa.edu.in/" class="site-logo w-nav-brand"><img width="432" height="80"
                   alt="Logo" src="./images/core/pcce_logo.svg" class="header-two-logo" /></a>
 
               <!-- navigating buttons -->
