--- a/pages/team.html
+++ b/pages/team.html
@@ -693,8 +693,7 @@
                 </div>
     
                 <div class="responsive-heading">
-                    <h1 class="chnage-padding text-align-center">Head
-                        Coordinater</h1>
+                    <h1 class="chnage-padding text-align-center">DEV TEAM</h1>
                 </div>
             </div>
             <div role="list" class="team-one-team-block w-dyn-items">
