--- a/pages/team.html
+++ b/pages/team.html
@@ -700,7 +700,7 @@
                 <div role="listitem" class="w-dyn-item">    
                         <div id="w-node-_1b4a7989-3413-825c-d0cc-254adb2f2c5a-ff41db6b"
                             data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c5a" class="about-one-team-item">
-                            <div class="about-one-team-image"><img width="390" height="436" alt=""
+                            <div class="about-one-team-image"><img width="inherit" height="436" alt=""
                                 src="/images/core/Nikhil.webp"
                                 sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 390px"
                                 srcset="/images/core/Nikhil.webp 500w, /images/core/Nikhil.webp 780w"
@@ -740,7 +740,7 @@
                 <div role="listitem" class="w-dyn-item">    
                         <div id="w-node-_1b4a7989-3413-825c-d0cc-254adb2f2c5a-ff41db6b"
                             data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c5a" class="about-one-team-item">
-                            <div class="about-one-team-image"><img width="390" height="436" alt=""
+                            <div class="about-one-team-image"><img width="inherit" height="436" alt=""
                                 src="/images/core/Saideep.webp"
                                 sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 390px"
                                 srcset="/images/core/Saideep.webp 500w, /images/core/Saideep.webp 780w"
@@ -780,7 +780,7 @@
                 <div role="listitem" class="w-dyn-item">    
                         <div id="w-node-_1b4a7989-3413-825c-d0cc-254adb2f2c5a-ff41db6b"
                             data-w-id="1b4a7989-3413-825c-d0cc-254adb2f2c5a" class="about-one-team-item">
-                            <div class="about-one-team-image"><img width="390" height="436" alt=""
+                            <div class="about-one-team-image"><img width="inherit" height="436" alt=""
                                 src="/images/core/Abhishek.webp"
                                 sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 47vw, (max-width: 1279px) 30vw, 390px"
                                 srcset="/images/core/Abhishek.webp 500w, /images/core/Abhishek.webp 780w"
