--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Techyon 2024 - PCCE's Annual Inter-College Technical Fest</title>
-  <meta name="description" content="Join Techyon 2024 at PCCE for an exciting range of technical events and competitions across departments. Tachyon-inspired tech fest with groundbreaking challenges." />
+  <meta name="description" content="Join Techyon 2024 at PCCE for an exciting range of technical events and competitions across departments." />
 
   <!-- Open Graph Meta Tags (For social media sharing) -->
   <meta property="og:title" content="Techyon 2024 - PCCE's Annual Inter-College Technical Fest" />
