--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
                 <div class="feature-one-item-post-icon-dept">
                     <div class="feature-one-item-post-icon-main"><img width="100%" height="100%"
                       alt="Gredient Icon"
-                      src="/images/dept/mech/Mechfest Logo.png" style="filter: invert();"
+                      src="/images/dept/mech/mechfest1.png"
                       loading="lazy" class="gredient-icon" /></div>
                 </div>
             </div>
